# shinox-agent-sdk

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
shinox_agent/: __init__.py  a2a_bridge.py  base.py  embeddings.py  logging.py  schemas.py  stuck_detection.py  worker.py
shinox_agent/tools/: __init__.py  history.py
tests/: conftest.py  test_async_tasks.py  test_base_agent.py  test_embeddings.py  test_history_tool.py  test_schemas.py  test_stuck_detection.py  test_wake_logic.py
