[project]
name = "shinox-agent-sdk"
version = "0.1.0"
description = "SDK for building agents in the Shinox decentralized mesh network"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Shinox Team" }
]
keywords = ["agent", "ai", "kafka", "mesh", "distributed", "langchain", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "faststream[kafka]>=0.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
all = [
    "shinox-agent-sdk[langchain,dev]",
]

[project.urls]
Homepage = "https://github.com/shinox-lab/shinox-agent-sdk"
Documentation = "https://github.com/shinox-lab/shinox-agent-sdk#readme"
Repository = "https://github.com/shinox-lab/shinox-agent-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shinox_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
